2007-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* amplot/amplot.sh.in: Remove function keyword.
	* changer-src/chg-lib.sh.in: Remove function keyword.
	* changer-src/chg-multi.sh.in: Remove function keyword.
	* changer-src/chg-zd-mtx.sh.in: Remove function keyword.

2007-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Fix double free.

2007-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: define sockaddr_storage and ss_family.
	* common-src/amanda.h: define INET_ADDRSTRLEN.
	* config/acinclude.m4i (AC_SOCKADDR_STORAGE): New macro.
	* configure.in: AC_SOCKADDR_STORAGE.

2007-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define AI_V4MAPPED and AI_ALL.

2007-05-17  Jean-Louis Martineau <martineau@zmanda.com>
        * util.c (cmp_sockaddr): un-map V4mapped address before comparison.
	* common-src/security-util.c: add debugging.

2007-05-17  Dustin J. Mitchell <dustun@zmanda.com> (merged by dustin@zmanda.com)
	* common-src/amanda.h: fix typo (missing 'extern') in erroutput_type

2006-05-16	John Franks <jrfranks@zmanda.com> (merged by dustin@zmanda.com)
	* oldrecover-src/amrecover.c oldrecover-src/extract_list.c
	  oldrecover-src/display_commands.c oldrecover-src/set_commands.c
	  recover-src/amrecover.c recover-src/extract_list.c
	  recover-src/display_commands.c recover-src/set_commands.c
	  server-src/changer.c server-src/taperscan.c
	  server-src/amtrmlog.c server-src/amindexd.c server-src/driver.c
	  server-src/amcheck.c server-src/dumper.c server-src/chunker.c
	  server-src/planner.c server-src/reporter.c server-src/taper.c
	  server-src/amtrmidx.c changer-src/scsi-linux.c
	  changer-src/chg-scsi-chio.c changer-src/scsi-chio.c
	  changer-src/scsi-hpux.c changer-src/scsi-cam.c
	  changer-src/scsi-changer-driver.c changer-src/chg-scsi.c
	  changer-src/scsi-bsd.c changer-src/scsi-irix.c
	  changer-src/scsi-solaris.c changer-src/sense.c